[gd_scene load_steps=6 format=3 uid="uid://dewg6kgfdtkaf"]

[ext_resource type="Script" path="res://src/Multiplying/Multiplying.gd" id="1_g0siy"]
[ext_resource type="Theme" uid="uid://c5yuw7ps208b" path="res://assets/theme/main_theme.tres" id="2_bsukr"]
[ext_resource type="Texture2D" uid="uid://dmxj5a3fcx4gi" path="res://assets/icons/record-button.png" id="3_78nyo"]
[ext_resource type="Texture2D" uid="uid://bwvr0mnnix15t" path="res://assets/icons/equal.png" id="4_4dp1c"]
[ext_resource type="Script" path="res://src/Multiplying/MulQuestionGenerator.gd" id="5_tdant"]

[node name="Multiplying" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g0siy")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_bsukr")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Oblicz:"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="A_Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "-1"

[node name="MultSign" type="TextureRect" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(12, 0)
layout_mode = 2
texture = ExtResource("3_78nyo")
expand_mode = 1
stretch_mode = 5

[node name="B_Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "-1"

[node name="EqSign" type="TextureRect" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(14, 0)
layout_mode = 2
texture = ExtResource("4_4dp1c")
expand_mode = 1
stretch_mode = 5

[node name="AnswerLineEdit" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CheckBtn" type="Button" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "SPRAWDÅ¹!"

[node name="MulQuestionGenerator" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_tdant")
